# bazel_example_new

./: BUILD.bazel  README.md  WORKSPACE  package.json
src/: BUILD.bazel
tools/: bazel.rc
